Main Project References

--- a/EFCore5WebApp.csproj
+++ b/EFCore5WebApp.csproj
@@ -12,4 +12,9 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="EFCore5WebApp.Core\EFCore5WebApp.Core.csproj" />
+    <ProjectReference Include="EFCore5WebApp.DAL\EFCore5WebApp.DAL.csproj" />
+  </ItemGroup>
+
 </Project>
