--- a/EFCore5WebApp/EFCore5WebApp.csproj
+++ b/EFCore5WebApp/EFCore5WebApp.csproj
@@ -13,8 +13,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="EFCore5WebApp.Core\EFCore5WebApp.Core.csproj" />
-    <ProjectReference Include="EFCore5WebApp.DAL\EFCore5WebApp.DAL.csproj" />
+    <ProjectReference Include="..\EFCore5WebApp.Core\EFCore5WebApp.Core.csproj" />
+    <ProjectReference Include="..\EFCore5WebApp.DAL\EFCore5WebApp.DAL.csproj" />
   </ItemGroup>
 
 </Project>
